docs: merge in docs-next repository
created shared folder so that dependencies are properly linked

--- a/packages/docs-next/public/index.html
+++ b/packages/docs-next/public/index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript">
       var _jipt = [['project', 'vuetify']]
     </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
