--- a/packages/vuetify/dev/index.html
+++ b/packages/vuetify/dev/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
